<resources>
    <string name="app_name">"Food For Life"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_account">Create New Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Wrong password</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_not_registered">This email is not registered</string>
    <string name="error_password_mismatch">Password does not match</string>

    <string name="error_email_taken">Email is already taken</string>
    <string name="title_activity_main">Food For Life</string>
    <string name="hint_count_of_people">Hom many people can be fed?</string>
    <string name="positive_button_post">Post</string>
    <string name="max_people">*Max. 5 people at a time</string>
    <string name="error_max_people">Max. 5 people allowed</string>
    <string name="food_count">Food for \"%s\" available</string>


    <!--keys-->
    <!--<string name="google_maps_key_release" translatable="false">YOUR_RELEASE_KEY</string>-->

    <string name="google_maps_key_debug" translatable="false">AIzaSyAnxqAK-yn9kqVXHdh6URM2xpiq2itvBCA</string>
    <string name="google_maps_key_release" translatable="false">AIzaSyD7_wmt9aYXijF1F3rRA8nahD2ZxJDMemw</string>


    <string name="error_ten_digits_number">10 digits long</string>

    <string name="title_activity_about">About</string>

    <string name="title_activity_help">HelpActivity</string>


    <string name="helpText">"<b>A). Food Provider:</b>\n\n

If you have a fresh food remained, from parties, marriage, anniversary or if you are social worker then we are happy to collect food from you.\n
1.If you are already logged in then click on the \"DONATE\" button on home page of app.\n
2.Enter the no. of people the food can be fed.\n
3.That information will be send to food Distributors\n\n

<b>B). Food Distributor:</b>\n\n

1.As soon as Food Distributor Logs in, he can see the list providing the details of food available for disitibution.\n
2.In list, Food Distributor able to see the details from where to collect food and contact details of the food provider."
</string>
    <string name="distributed">Distributed</string>
    <string name="question_fresh_food">Do you have ample amount of fresh food?</string>
    <string name="donate">Donate</string>
    <string name="icon_phone">phone icon</string>
    <string name="timestamp">timestamp</string>
    <string name="default_user_name">User Name</string>
    <string name="default_contact_number">9876543210</string>
    <string name="icon_address">address icon</string>
    <string name="distribute_food">Distribute Food</string>
    <string name="navigate">Navigate</string>
    <string name="address">Address</string>
    <string name="string_go_to_provider">Please collect the food and distribute to poor hungry people near you.</string>
    <string name="string_thank_you">Thank You for your contribution towards better India…:)</string>
    <string name="string_default_email">user@example.com</string>
    <string name="string_ok">OK</string>
    <string name="string_new_account_created">New account created</string>
    <string name="string_network_error">Check your network</string>
    <string name="string_error">Error</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_no">No</string>
    <string name="string_ready_to_distribute">Are you really ready to distribute? This action cannot be reverted.</string>
    <string name="string_yes">Yes</string>
    <string name="default_encoded_email">user@example,com</string>
    <string name="default_address">City, India</string>
    <string name="string_already_distributed">Food is already distributed</string>
    <string name="appwidget_text">Donate Food</string>
    <string name="string_version">Version 1.0</string>
    <string name="created_by">Created By</string>
    <string name="ashwin_wadte">Ashwin Wadte</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="your_address">Your Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don`t have account</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="empty_string">No Data</string>
</resources>
