<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1976d2"
    android:fillViewport="true"
    tools:context=".authentication.CreateAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_create_account_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="visible">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_username_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/enter_your_name"
                    android:inputType="textCapWords"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_mobile_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/enter_your_mobile_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <TextView
                    android:id="@+id/tvGetAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:ellipsize="end"
                    android:hint="@string/your_address"
                    android:onClick="onGetAddressPressed"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_email_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:background="@color/colorAccent"
                android:onClick="onCreateAccountPressed"
                android:text="@string/title_activity_create_account"
                android:textColor="@android:color/white"
                android:contentDescription="@string/title_activity_create_account"
                android:textSize="@dimen/login_buttons_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/LoginCreateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <TextView
                    style="@style/LoginCreateTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSignInPressed"
                    android:text="@string/sign_in" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
