<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1976d2"
            android:fillViewport="true"
            tools:context=".authentication.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="visible">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/edit_text_password"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/enter_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_with_password"
                style="@style/Widget.Udacity.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/lv_header_text_size"
                android:background="@color/colorAccent"
                android:contentDescription="@string/sign_in"
                android:onClick="onSignInPressed"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dont_have_account"
                    style="@style/LoginCreateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"/>

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/LoginCreateTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSignUpPressed"
                    android:text="@string/sign_up"/>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>

